# genesis_oxide

./: .gitignore  Cargo.toml  README.md  cpu_benchmark.json  genesis_oxide_manifest.py  gpu_benchmark.json
crates/dialect-genlex/: Cargo.toml
crates/dialect-genlex/src/: assembler.rs  disassembler.rs  lib.rs  main.rs
crates/genesis-runtime/: Cargo.toml
crates/genesis-runtime/src/: main.rs
crates/genlex-oxide/: Cargo.toml
crates/genlex-oxide/src/: lib.rs
crates/genlex-types/: Cargo.toml
crates/genlex-types/src/: lib.rs
crates/sovereign-engine/: Cargo.toml
crates/sovereign-engine/src/: ace.rs  archive.rs  auditor.rs  batch.rs  batch_vm.ptx  codegen.rs  crawler.rs  defrag.rs  evolution_kernel.ptx  forge.rs  glyph_vm.ptx  gpu_dispatch.rs  main.rs  nlp.rs  sandbox.rs  sector29.rs  skva.rs  vault.rs  vault_search.ptx  will.rs
examples/: density.gbin  density.glx  fibonacci.gbin  fibonacci.glx  resonance.gbin  resonance.glx
will_inbox/: gen_0000_Arithmetic.gbin  gen_0001_Resonance.gbin  gen_0002_Iterative.gbin  gen_0003_Mixed.gbin  gen_0004_Arithmetic.gbin  gen_0005_Resonance.gbin  gen_0006_Iterative.gbin  gen_0007_Mixed.gbin
