[package]
name = "genesis-runtime"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true

[dependencies]
genlex-types = { path = "../genlex-types" }
genlex-oxide = { path = "../genlex-oxide" }
cudarc = { version = "0.19.7", features = ["cuda-13010", "driver", "nvrtc"] }
